[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tabcorr"
authors = [{name = "Johannes U. Lange", email = "julange.astro@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy", "scipy", "astropy", "h5py", "tqdm"]

[project.urls]
Home = "https://johannesulf.github.io/"

[tool.flit.sdist]
exclude = ["scripts", ".gitignore"]
